import nodejs modules

--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
     <script src="./config.js"></script>
   </head>
   <body>
-    <tree></tree>
+    <tree>
+      Loading
+    </tree>
+
   </body>
   <script>
       System.import('build/src/main');
