--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <script src="./config.js"></script>
   </head>
   <body>
-    <tree>
+    <application>
       Loading
-    </tree>
+    </application>
 
   </body>
   <script>
